tests/snapshots/regression/recovery__t16_module_missing_lbrace_contextual.snap
---
source: tests/integration/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/recovery/t16_module_missing_lbrace_contextual.flx
exit_code: 1

[ 1 of 12] Compiling  Assert
[ 2 of 12] Compiling  Debug
[ 3 of 12] Compiling  Array
[ 4 of 12] Compiling  List
[ 5 of 12] Compiling  Either
[ 6 of 12] Compiling  IO
[ 7 of 12] Compiling  Math
[ 8 of 12] Compiling  Numeric
[ 9 of 12] Compiling  Option
[10 of 12] Compiling  Primops
[11 of 12] Compiling  String
• 1 error • tests/fixtures/recovery/t16_module_missing_lbrace_contextual.flx
error[E034]: Missing Module Body

This module body needs to start with `{`.

  tests/fixtures/recovery/t16_module_missing_lbrace_contextual.flx:2:1
  |
2 | let after = 1
  | ^^^

Hint:
  Module declarations use `module Name { ... }`.

Note:
  while parsing module `Demo`
